Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20065

Invalid read in qurl.cpp

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0
    • 4.7.3
    • Core: I/O
    • be3bd368485d373e63b3e4ff5c7db2da1d119feb

      STEPS LEADING TO PROBLEM:

      Valgrind reports following problem:

      ==7137== Invalid read of size 1
      ==7137== at 0x483874C: bcmp (mc_replace_strmem.c:676)
      ==7137== by 0x5F0CE7B: QUrl::removeAllEncodedQueryItems(QByteArray const&)
      (qbytearray.h:510)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            goffart Olivier Goffart (closed Nokia identity) (Inactive)
            jupakari Juuso Pakarinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes